# TJ-bot

./: .gitignore  Dockerfile  README.md  api.py  config.py  main.py  models.py  pyproject.toml  tools.py  vectordb.py  workflow.py
agents/: base.py  busway_route.py  classifier.py  rag.py  router.py  small_talk.py
chroma_db/: chroma.sqlite3
data/: markitdown.ipynb
data/doc/: web_data.md
data/gtfs/: agency.txt  calendar.txt  fare_attributes.txt  fare_rules.txt  frequencies.txt  route_list.txt  routes.txt  stop_times.txt  stops.txt  transfers.txt  trips.txt
