[project]
name = "tj-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.0",
    "google-generativeai>=0.8.5",
    "gradio>=5.47.2",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.30",
    "langchain-google-genai>=2.0.10",
    "langgraph>=0.6.7",
    "markdown>=3.9",
    "markitdown>=0.1.3",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "rapidfuzz>=3.14.1",
    "sentence-transformers>=5.1.1",
    "transformers>=4.56.2",
    "unstructured>=0.18.15",
]
